--- a/CódigoFuente/BitacorasProduccion/Views/IT_asignacion_hardware/responsivas.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_asignacion_hardware/responsivas.cshtml
@@ -110,6 +110,10 @@
                                                 <div class="col-md-2 col-sm-2 ">
                                                     @Html.DropDownList("asignacion_actual", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
                                                 </div>
+                                                <label class="control-label col-md-1 col-sm-1" for="id_tipo_accesorio" style="text-align:right">Tipo de Accesorio:</label>
+                                                <div class="col-md-2 col-sm-2 ">
+                                                    @Html.DropDownList("id_tipo_accesorio", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                                </div>
                                             </div>
                                             <div class="form-group row">
                                                 <div class="col-md-8 col-sm-8">
