--- a/CódigoFuente/BitacorasProduccion/Views/ResponsableBudget/EditCentroPresenteHT.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ResponsableBudget/EditCentroPresenteHT.cshtml
@@ -1,5 +1,6 @@
 ﻿@model Portal_2_0.Models.budget_centro_costo
 @using Bitacoras.Util
+@using Clases.Util;
 
 @{
 
@@ -33,20 +34,21 @@
 
     bool controlling = ViewBag.controlling != null ? (bool)ViewBag.controlling : false;
     bool import = ViewBag.import != null ? (bool)ViewBag.import : false;
+    bool info = ViewBag.info != null ? (bool)ViewBag.info : false;
 
-    //determina si los meses son actual o no
-    bool isActualOctubre = controlling ? false : rel_presente.budget_anio_fiscal.isActual(10) == "ACT";
-    bool isActualNoviembre = controlling ? false : rel_presente.budget_anio_fiscal.isActual(11) == "ACT";
-    bool isActualDiciembre = controlling ? false : rel_presente.budget_anio_fiscal.isActual(12) == "ACT";
-    bool isActualEnero = controlling ? false : rel_presente.budget_anio_fiscal.isActual(1) == "ACT";
-    bool isActualFebrero = controlling ? false : rel_presente.budget_anio_fiscal.isActual(2) == "ACT";
-    bool isActualMarzo = controlling ? false : rel_presente.budget_anio_fiscal.isActual(3) == "ACT";
-    bool isActualAbril = controlling ? false : rel_presente.budget_anio_fiscal.isActual(4) == "ACT";
-    bool isActualMayo = controlling ? false : rel_presente.budget_anio_fiscal.isActual(5) == "ACT";
-    bool isActualJunio = controlling ? false : rel_presente.budget_anio_fiscal.isActual(6) == "ACT";
-    bool isActualJulio = controlling ? false : rel_presente.budget_anio_fiscal.isActual(7) == "ACT";
-    bool isActualAgosto = controlling ? false : rel_presente.budget_anio_fiscal.isActual(8) == "ACT";
-    bool isActualSeptiembre = controlling ? false : rel_presente.budget_anio_fiscal.isActual(9) == "ACT";
+    //determina si los meses son actual o no y deshabilata todas las columnas en caso de que el Fy este deshabilitado
+    bool isActualOctubre = controlling ? false : rel_presente.budget_anio_fiscal.isActual(10) == "ACT" || !rel_presente.estatus || info;
+    bool isActualNoviembre = controlling ? false : rel_presente.budget_anio_fiscal.isActual(11) == "ACT" || !rel_presente.estatus || info;
+    bool isActualDiciembre = controlling ? false : rel_presente.budget_anio_fiscal.isActual(12) == "ACT" || !rel_presente.estatus || info;
+    bool isActualEnero = controlling ? false : rel_presente.budget_anio_fiscal.isActual(1) == "ACT" || !rel_presente.estatus || info;
+    bool isActualFebrero = controlling ? false : rel_presente.budget_anio_fiscal.isActual(2) == "ACT" || !rel_presente.estatus || info;
+    bool isActualMarzo = controlling ? false : rel_presente.budget_anio_fiscal.isActual(3) == "ACT" || !rel_presente.estatus || info;
+    bool isActualAbril = controlling ? false : rel_presente.budget_anio_fiscal.isActual(4) == "ACT" || !rel_presente.estatus || info;
+    bool isActualMayo = controlling ? false : rel_presente.budget_anio_fiscal.isActual(5) == "ACT" || !rel_presente.estatus || info;
+    bool isActualJunio = controlling ? false : rel_presente.budget_anio_fiscal.isActual(6) == "ACT" || !rel_presente.estatus || info;
+    bool isActualJulio = controlling ? false : rel_presente.budget_anio_fiscal.isActual(7) == "ACT" || !rel_presente.estatus || info;
+    bool isActualAgosto = controlling ? false : rel_presente.budget_anio_fiscal.isActual(8) == "ACT" || !rel_presente.estatus || info;
+    bool isActualSeptiembre = controlling ? false : rel_presente.budget_anio_fiscal.isActual(9) == "ACT" || !rel_presente.estatus || info;
 
 }
 
@@ -325,9 +327,58 @@
                     <div class="col-md-12">
                         <div class="ln_solid"></div>
                         <button type="button" id="btn-clear_filters" class="btn btn-danger  float-lg-left"><i class="fa-solid fa-filter-circle-xmark"></i>  Borrar Filtros</button>
-                        <button type="button" id="btn-submit-salir" class="btn btn-info float-lg-right"><i class="fa-solid fa-save"></i>  Guardar y salir</button>
-                        <button type="button" id="btn-submit" class="btn btn-success float-lg-right"><i class="fa-solid fa-save"></i>  Guardar y continuar</button>
+                        @if ((rel_presente.estatus && !info) || (User.IsInRole(TipoRoles.BG_CONTROLLING) && controlling))
+                        {
+                            <button type="button" id="btn-submit-salir" class="btn btn-info float-lg-right"><i class="fa-solid fa-save"></i>  Guardar y salir</button>
+                            <button type="button" id="btn-submit" class="btn btn-success float-lg-right"><i class="fa-solid fa-save"></i>  Guardar y continuar</button>
+                        }
+
                     </div>
+                    @if (User.IsInRole(TipoRoles.BG_CONTROLLING))
+
+                    {
+                        <div class="col-md-12">
+                            <div class="ln_solid"></div>                          
+
+                            @if (rel_proximo != null && rel_proximo.estatus)
+                            {
+                                <a class="btn btn-danger float-right" title="Lock" style="color:white" onclick="showLockDialog(@rel_proximo.id)">
+                                    <i class="fa fa-lock"></i> Lock Budget
+                                </a>
+                            }
+                            else if (rel_proximo == null)
+                            {
+                                <a class="btn btn-warning float-right disabled" title="Unlock" style="color:white">
+                                    <i class="fa fa-unlock"></i> Unlock Budget
+                                </a>
+                            }
+                            else
+                            {
+                                <a class="btn btn-warning float-right" title="Unlock" style="color:white" onclick="showUnlockDialog(@rel_proximo.id)">
+                                    <i class="fa fa-unlock"></i> Unlock Budget
+                                </a>
+                            }
+                            @if (rel_presente != null && rel_presente.estatus)
+                            {
+                                <a class="btn btn-danger float-right" title="Lock" style="color:white" onclick="showLockDialog(@rel_presente.id)">
+                                    <i class="fa fa-lock"></i> Lock Forecast
+                                </a>
+                            }
+                            else if (rel_presente == null)
+                            {
+                                <a class="btn btn-warning float-right disabled" title="Unlock" style="color:white">
+                                    <i class="fa fa-unlock"></i> Unlock Forecast
+                                </a>
+                            }
+                            else
+                            {
+                                <a class="btn btn-warning float-right" title="Unlock" style="color:white" onclick="showUnlockDialog(@rel_presente.id)">
+                                    <i class="fa fa-unlock"></i> Unlock Forecast
+                                </a>
+                            }
+                        </div>
+
+                    }
                 </div>
             </div>
             <div>
@@ -1746,7 +1797,8 @@
            },
            //comentarios
            {
-               validator: function(value, callback) {
+                readOnly: @(!rel_presente.estatus || info ? "true" : "false"),
+                validator: function(value, callback) {
                    let max = 200;
                    if (value != null && value.length > max) {
                        toastMixin.fire({
@@ -3996,6 +4048,139 @@
 
     }
 
+        //muestra el modal para bloquear
+        function showLockDialog(idRelFYCentro) {
+            Swal.fire({
+                title: 'Confirmation',
+                text: "Are you sure you want to lock this cost center?",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes!'
+            }).then((result) => {
+                if (result.isConfirmed) {
+
+                    //bloquea el centro de costo
+                    $.ajax({
+                        type: 'POST',
+                        url: '/BudgetControlling/CambiaEstatusRelFYCentro',
+                        data: { idRelFYCentro: idRelFYCentro, activo: false },
+                        success: function (data) {
+                            try {
+                                console.log(data);
+                                if (data[0].Status == "OK") {
+                                    //en caso de exito
+                                    Swal.fire({
+                                        title: 'Confirmation',
+                                        text: "The cost center has been locked!",
+                                        confirmButtonText: 'OK',
+                                        allowOutsideClick: false
+                                    }).then((result) => {
+                                        if (result.isConfirmed) {
+                                            // Vuelve a cargar la página actual sin la caché del navegador
+                                            location.reload();
+                                        }
+                                    })
+
+                                } else { //en caso de que el mensaje no sea exitoso muestra mensaje
+                                    Swal.fire({
+                                        icon: 'error',
+                                        title: 'Ocurrió un error',
+                                        text: 'Ha ocurrido un error, intente nuevamente.'
+                                    })
+                                }
+                            } catch (error) {
+                                //en caso de que no ser muestre info de ningun tipo muestra error
+                                Swal.fire({
+                                    icon: 'error',
+                                    title: 'Ocurrió un error',
+                                    text: 'Ha ocurrido un error, intente nuevamente.'
+                                })
+                            }
+                        },
+                        error: function (textStatus, errorThrown) {
+                            //en caso de error en la llamada ajax
+                            Swal.fire({
+                                icon: 'error',
+                                title: 'Ocurrió un error',
+                                text: 'Ha ocurrido un error, intente nuevamente.'
+                            })
+                        },
+                        async: true
+                    });
+
+                }
+            })
+
+        }
+
+        //muestra el modal para desbloquear
+        function showUnlockDialog(idRelFYCentro) {
+            Swal.fire({
+                title: 'Confirmation',
+                text: "Are you sure you want to unlock this cost center?",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes!'
+            }).then((result) => {
+                if (result.isConfirmed) {
+
+                    //bloquea el centro de costo
+                    $.ajax({
+                        type: 'POST',
+                        url: '/BudgetControlling/CambiaEstatusRelFYCentro',
+                        data: { idRelFYCentro: idRelFYCentro, activo: true },
+                        success: function (data) {
+                            try {
+                                console.log(data);
+                                if (data[0].Status == "OK") {
+                                    //en caso de exito
+                                    Swal.fire({
+                                        title: 'Confirmation',
+                                        text: "The cost center has been unlocked!",
+                                        confirmButtonText: 'OK',
+                                        allowOutsideClick: false
+                                    }).then((result) => {
+                                        if (result.isConfirmed) {
+                                            // Vuelve a cargar la página actual sin la caché del navegador
+                                            location.reload();
+                                        }
+                                    })
+
+                                } else { //en caso de que el mensaje no sea exitoso muestra mensaje
+                                    Swal.fire({
+                                        icon: 'error',
+                                        title: 'Ocurrió un error',
+                                        text: 'Ha ocurrido un error, intente nuevamente.'
+                                    })
+                                }
+                            } catch (error) {
+                                //en caso de que no ser muestre info de ningun tipo muestra error
+                                Swal.fire({
+                                    icon: 'error',
+                                    title: 'Ocurrió un error',
+                                    text: 'Ha ocurrido un error, intente nuevamente.'
+                                })
+                            }
+                        },
+                        error: function (textStatus, errorThrown) {
+                            //en caso de error en la llamada ajax
+                            Swal.fire({
+                                icon: 'error',
+                                title: 'Ocurrió un error',
+                                text: 'Ha ocurrido un error, intente nuevamente.'
+                            })
+                        },
+                        async: true
+                    });
+
+                }
+            })
+
+        }
 
 
    function Recordatorio() {
