2024-03-14 Se agrega usuarios del portal tkmm a Reporte de Usuarios.

--- a/CódigoFuente/BitacorasProduccion/Views/IT_reporte_usuarios/ExportUsers.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_reporte_usuarios/ExportUsers.cshtml
@@ -2,7 +2,7 @@
 @model Portal_2_0.Models.ExcelViewModel
 
 @{
-    ViewBag.Title = "Carga ExportUsers";
+    ViewBag.Title = "Carga Usuarios Modern Workplace";
     ViewBag.PrimerNivel = "IT_epo_wsus";
     ViewBag.SegundoNivel = "IT_reporte_usuarios";
     ViewBag.ControllerName = ViewContext.RouteData.Values["controller"];
