--- a/CódigoFuente/BitacorasProduccion/Views/IT_reporte_usuarios/UsuariosActivos.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_reporte_usuarios/UsuariosActivos.cshtml
@@ -2,7 +2,7 @@
 @model Portal_2_0.Models.ExcelViewModel
 
 @{
-    ViewBag.Title = "Carga Usuarios Activos";
+    ViewBag.Title = "Carga Usuarios RH";
     ViewBag.PrimerNivel = "IT_epo_wsus";
     ViewBag.SegundoNivel = "IT_reporte_usuarios";
     ViewBag.ControllerName = ViewContext.RouteData.Values["controller"];
