--- a/CódigoFuente/BitacorasProduccion/Views/IT_reporte_usuarios/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_reporte_usuarios/Index.cshtml
@@ -20,6 +20,13 @@
     <!-- Select2 -->
     <link href="@Url.Content("~/Content/vendors/select2/css/select2.css")" rel="stylesheet">
     <link href="@Url.Content("~/Content/vendors/select2-bootstrap4-theme/select2-bootstrap4.min.css")" rel="stylesheet">
+
+    <style>
+        table.table-green thead tr {
+            background-color: green !important;
+        }
+
+    </style>
 }
 
 @*Para SweetAlert*@
@@ -57,15 +64,15 @@
 
                                     <a href="@Url.Action("Export4Import", ViewBag.ControllerName)" class="btn btn-success" style="color:white">
                                         <i class="fa-solid fa-upload"></i>
-                                        Subir Export4Import
+                                        Subir Usuarios tk Alemania
                                     </a>
                                     <a href="@Url.Action("UsuariosActivos", ViewBag.ControllerName)" class="btn btn-primary" style="color:white">
                                         <i class="fa-solid fa-upload"></i>
-                                        Subir Usuarios Activos
+                                        Subir Usuarios RH
                                     </a>
                                     <a href="@Url.Action("ExportUsers", ViewBag.ControllerName)" class="btn btn-info" style="color:white">
                                         <i class="fa-solid fa-upload"></i>
-                                        Subir ExportUsers
+                                        Subir Usuarios Modern Workplace
                                     </a>
 
 
@@ -90,11 +97,11 @@
                                             <div class="col-md-3 col-sm-3">
                                                 @Html.DropDownList("Reporte2", null, htmlAttributes: new { @class = "form -control select2bs4", @style = "width:100%" })
                                             </div>
-
+                                            <div class="col-md-1 col-sm-1">
+                                                <input type="submit" value="Filtrar" class="btn btn-info float-right" />
+                                            </div>
                                         </div>
-                                        <div class="col-md-1 col-sm-1">
-                                            <input type="submit" value="Filtrar" class="btn btn-info float-right" />
-                                        </div>
+                                       
                                     }
                                 </div>
 
@@ -105,7 +112,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <h3>@((string)ViewBag.TituloTable1)</h3>
+                                    <h3 style="color: #009ff5">@((string)ViewBag.TituloTable1)</h3>
                                 </div>
 
                                 <div class="card-box table-responsive">
@@ -120,7 +127,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <h3>@((string)ViewBag.TituloTable2)</h3>
+                                    <h3  style="color: #009ff5">@((string)ViewBag.TituloTable2)</h3>
                                 </div>
 
                                 <div class="card-box table-responsive">
@@ -137,11 +144,11 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <h3>@("En "+(string)ViewBag.TituloTable1 +", pero NO en "+ (string)ViewBag.TituloTable2)</h3>
+                                        <h3  style="color: green">@("En "+(string)ViewBag.TituloTable1 +", pero NO en "+ (string)ViewBag.TituloTable2)</h3>
                                     </div>
 
                                     <div class="card-box table-responsive">
-                                        <table id="table3" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+                                        <table id="table3" class="table table-striped table-bordered dt-responsive nowrap table-green" cellspacing="0" width="100%">
                                             @Html.Raw((string)ViewBag.Table3HTML)
                                         </table>
                                     </div>
@@ -155,11 +162,11 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <h3>@("En "+(string)ViewBag.TituloTable2 +", pero NO en "+ (string)ViewBag.TituloTable1)</h3>
+                                        <h3  style="color: green">@("En "+(string)ViewBag.TituloTable2 +", pero NO en "+ (string)ViewBag.TituloTable1)</h3>
                                     </div>
 
                                     <div class="card-box table-responsive">
-                                        <table id="table4" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+                                        <table id="table4" class="table table-striped table-bordered dt-responsive nowrap table-green" cellspacing="0" width="100%">
                                             @Html.Raw((string)ViewBag.Table4HTML)
                                         </table>
                                     </div>
