--- a/CódigoFuente/BitacorasProduccion/Views/ReportePesadas/Puebla.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ReportePesadas/Puebla.cshtml
@@ -92,7 +92,7 @@
 
                                             <div class="col-md-6 col-sm-6">
                                                 @*<input type="text" class="form-control" value="@filtroCliente">*@
-                                                <select name="cliente" id="cliente" class="form-control select2bs4" style="width:100%" required>
+                                                <select name="cliente" id="cliente" class="form-control select2bs4" style="width:100%" >
                                                     @foreach (SelectListItem item in (List<SelectListItem>)ViewBag.Clientes)
                                                     {
                                                         if (item.Value == filtroCliente)
